--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400;1,500;1,700;1,900&display=swap");
 
 html {
-	scroll-behavior: smooth;
+  scroll-behavior: smooth !important;
 }
 
 body {
-	margin: 0;
-	padding: 0;
+  margin: 0;
+  padding: 0;
+}
+
+body a {
+  text-decoration: none !important;
 }
