--- a/src/App.css
+++ b/src/App.css
@@ -19,3 +19,15 @@ body a {
 body span {
 	/* font-size: 1.125rem !important; */
 }
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+	-webkit-appearance: none !important;
+	margin: 0 !important;
+}
+
+/* Firefox */
+input[type="number"] {
+	-moz-appearance: textfield !important;
+}
