--- a/src/App.css
+++ b/src/App.css
@@ -4,31 +4,35 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400;1,500;1,700;1,900&display=swap");
 
 html {
-	scroll-behavior: smooth !important;
+  scroll-behavior: smooth !important;
 }
 
 body {
-	margin: 0;
-	padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 body a {
-	text-decoration: none !important;
-	color: inherit;
+  text-decoration: none !important;
+  color: inherit;
 }
 
 body span {
-	/* font-size: 1.125rem !important; */
+  /* font-size: 1.125rem !important; */
+}
+
+.review-button-container {
+  margin-bottom: calc(100vh - 650px);
 }
 
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-	-webkit-appearance: none !important;
-	margin: 0 !important;
+  -webkit-appearance: none !important;
+  margin: 0 !important;
 }
 
 /* Firefox */
 input[type="number"] {
-	-moz-appearance: textfield !important;
+  -moz-appearance: textfield !important;
 }
